--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@chakra-ui/react": "^2.3.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@prisma/client": "^4.5.0",
     "framer-motion": "^7.6.2",
     "next": "13.0.0",
+    "next-auth": "^4.15.0",
+    "prisma": "^4.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
